Added answer reader end point
